# python-quill-delta

./: .travis.yml  README.md  README.rst  setup.cfg  setup.py  watch.py
quilldelta/: __init__.py  abc.py  async.py  delta.py  iterator.py  operations.py  reader.py  types.py  utils.py
tests/: test_builder.py  test_compose.py  test_delta.py  test_helpers.py  test_operations.py  test_reader.py  test_serializer.py
